training data updated

--- a/UI/bower.json
+++ b/UI/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "UI",
-  "homepage": "https://github.com/Andyccs/sport-news-retrieval",
+  "homepage": "https://github.com/singhpriyanshu5",
   "authors": [
-    "Andyccs <y4andy@gmail.com>"
+    "singhpriyanshu5 <singhpriyanshu5@gmail.com>"
   ],
   "description": "website for sport tweets retrieval",
   "main": "index.html",
